@@ -1,12 +1,17 @@
 package io.kestra.executor;
 
+import io.kestra.core.assets.AssetService;
 import io.kestra.core.debug.Breakpoint;
 import io.kestra.core.exceptions.InternalException;
 import io.kestra.core.metrics.MetricRegistry;
 import io.kestra.core.models.Label;
+import io.kestra.core.models.assets.AssetIdentifier;
+import io.kestra.core.models.assets.AssetUser;
+import io.kestra.core.models.assets.AssetsDeclaration;
+import io.kestra.core.models.assets.AssetsInOut;
 import io.kestra.core.models.executions.*;
-import io.kestra.core.models.flows.Flow;
 import io.kestra.core.models.flows.FlowInterface;
+import io.kestra.core.models.flows.FlowWithSource;
 import io.kestra.core.models.flows.State;
 import io.kestra.core.models.flows.sla.Violation;
 import io.kestra.core.models.tasks.*;
@@ -20,6 +25,7 @@ import io.kestra.core.storages.StorageContext;
 import io.kestra.core.test.flow.TaskFixture;
 import io.kestra.core.trace.propagation.RunContextTextMapSetter;
 import io.kestra.core.utils.ListUtils;
+import io.kestra.core.utils.Logs;
 import io.kestra.core.utils.MapUtils;
 import io.kestra.core.utils.TruthUtils;
 import io.kestra.plugin.core.flow.LoopUntil;
@@ -62,9 +68,6 @@ public class ExecutorService {
     private ConditionService conditionService;
 
     @Inject
-    private LogService logService;
-
-    @Inject
     private FlowInputOutput flowInputOutput;
 
     @Inject
@@ -98,6 +101,12 @@ public class ExecutorService {
     @Named(QueueFactoryInterface.WORKERTASKLOG_NAMED)
     private QueueInterface<LogEntry> logQueue;
 
+    @Inject
+    private AssetService assetService;
+
+    @Inject
+    private RunContextInitializer runContextInitializer;
+
     protected FlowMetaStoreInterface flowExecutorInterface() {
         // bean is injected late, so we need to wait
         if (this.flowExecutorInterface == null) {
@@ -112,7 +121,7 @@ public class ExecutorService {
         if (flow.getConcurrency() != null && runningCount >= flow.getConcurrency().getLimit()) {
             return switch (flow.getConcurrency().getBehavior()) {
                 case QUEUE -> {
-                    logService.logExecution(
+                    Logs.logExecution(
                         executionRunning.getExecution(),
                         Level.INFO,
                         "Execution is queued due to concurrency limit exceeded, {} running(s)",
@@ -127,7 +136,7 @@ public class ExecutorService {
                 case CANCEL ->
                     executionRunning
                         .withExecution(executionRunning.getExecution().withState(State.Type.CANCELLED))
-                        .withConcurrencyState(ExecutionRunning.ConcurrencyState.RUNNING);
+                        .withConcurrencyState(ExecutionRunning.ConcurrencyState.CANCELLED);
                 case FAIL -> {
                     var failedExecution = executionRunning.getExecution().failedExecutionFromExecutor(new IllegalStateException("Execution is FAILED due to concurrency limit exceeded"));
                     try {
@@ -137,7 +146,7 @@ public class ExecutorService {
                     }
                     yield executionRunning
                         .withExecution(failedExecution.getExecution())
-                        .withConcurrencyState(ExecutionRunning.ConcurrencyState.RUNNING);
+                        .withConcurrencyState(ExecutionRunning.ConcurrencyState.FAILED);
                 }
 
             };
@@ -198,7 +207,7 @@ public class ExecutorService {
 
     public Execution onNexts(Execution execution, List<TaskRun> nexts) {
         if (log.isTraceEnabled()) {
-            logService.logExecution(
+            Logs.logExecution(
                 execution,
                 Level.TRACE,
                 "Found {} next(s) {}",
@@ -225,7 +234,7 @@ public class ExecutorService {
                 .counter(MetricRegistry.METRIC_EXECUTOR_EXECUTION_STARTED_COUNT, MetricRegistry.METRIC_EXECUTOR_EXECUTION_STARTED_COUNT_DESCRIPTION, metricRegistry.tags(execution))
                 .increment();
 
-            logService.logExecution(
+            Logs.logExecution(
                 execution,
                 Level.INFO,
                 "Flow started"
@@ -237,7 +246,7 @@ public class ExecutorService {
         return newExecution;
     }
 
-    private Optional<WorkerTaskResult> childWorkerTaskResult(Flow flow, Execution execution, TaskRun parentTaskRun) throws InternalException {
+    private Optional<WorkerTaskResult> childWorkerTaskResult(FlowWithSource flow, Execution execution, TaskRun parentTaskRun) throws InternalException {
         Task parent = flow.findTaskByTaskId(parentTaskRun.getTaskId());
 
         if (parent instanceof FlowableTask<?> flowableParent) {
@@ -247,7 +256,7 @@ public class ExecutorService {
             // first find the normal ended child tasks and send result
             Optional<State.Type> state;
             try {
-                state = flowableParent.resolveState(runContext, execution, parentTaskRun);
+                 state = flowableParent.resolveState(runContext, execution, parentTaskRun);
             } catch (Exception e) {
                 // This will lead to the next task being still executed, but at least Kestra will not crash.
                 // This is the best we can do, Flowable task should not fail, so it's a kind of panic mode.
@@ -263,18 +272,30 @@ public class ExecutorService {
                 WorkerTaskResult workerTaskResult = endedTask.get();
                 // Compute outputs for the parent Flowable task if a terminated state was resolved
                 if (workerTaskResult.getTaskRun().getState().isTerminated()) {
+                    Variables variables;
                     try {
                         // as flowable tasks can save outputs during iterative execution, we must merge the maps here
                         Output outputs = flowableParent.outputs(runContext);
                         Map<String, Object> outputMap = MapUtils.merge(workerTaskResult.getTaskRun().getOutputs(), outputs == null ? null : outputs.toMap());
-                        Variables variables = variablesService.of(StorageContext.forTask(workerTaskResult.getTaskRun()), outputMap);
-                        return Optional.of(new WorkerTaskResult(workerTaskResult
-                            .getTaskRun()
-                            .withOutputs(variables)
-                        ));
+                        variables = variablesService.of(StorageContext.forTask(workerTaskResult.getTaskRun()), outputMap);
                     } catch (Exception e) {
                         runContext.logger().error("Unable to resolve outputs from the Flowable task: {}", e.getMessage(), e);
+                        variables = Variables.empty();
                     }
+
+                    // flowable attempt state transition to terminated
+                    List<TaskRunAttempt> attempts = Optional.ofNullable(parentTaskRun.getAttempts())
+                        .map(ArrayList::new)
+                        .orElseGet(ArrayList::new);
+                    State.Type endedState = endedTask.get().getTaskRun().getState().getCurrent();
+                    TaskRunAttempt updated = attempts.getLast().withState(endedState);
+                    attempts.set( attempts.size() - 1, updated);
+
+                    return Optional.of(new WorkerTaskResult(workerTaskResult
+                        .getTaskRun()
+                        .withOutputs(variables)
+                        .withAttempts(attempts)
+                    ));
                 }
                 return endedTask;
             }
@@ -320,7 +341,6 @@ public class ExecutorService {
 
     private List<TaskRun> childNextsTaskRun(Executor executor, TaskRun parentTaskRun) throws InternalException {
         Task parent = executor.getFlow().findTaskByTaskId(parentTaskRun.getTaskId());
-
         if (parent instanceof FlowableTask<?> flowableParent) {
             // Count the number of flowable tasks executions, some flowable are being called multiple times,
             // so this is not exactly the number of flowable taskruns but the number of times they are executed.
@@ -375,6 +395,7 @@ public class ExecutorService {
                     Output outputs = flowableTask.outputs(runContext);
                     Variables variables = variablesService.of(StorageContext.forTask(taskRun), outputs);
                     taskRun = taskRun.withOutputs(variables);
+
                 } catch (Exception e) {
                     runContext.logger().warn("Unable to save output on taskRun '{}'", taskRun, e);
                 }
@@ -385,20 +406,21 @@ public class ExecutorService {
     }
 
     private Executor onEnd(Executor executor) {
-        final Flow flow = executor.getFlow();
+        final FlowWithSource flow = executor.getFlow();
 
         Execution newExecution = executor.getExecution()
             .withState(executor.getExecution().guessFinalState(flow));
 
         if (flow.getOutputs() != null) {
             RunContext runContext = runContextFactory.of(executor.getFlow(), executor.getExecution());
+            var inputAndOutput = runContext.inputAndOutput();
 
             try {
-                Map<String, Object> outputs = FlowInputOutput.renderFlowOutputs(flow.getOutputs(), runContext);
-                outputs = flowInputOutput.typedOutputs(flow, executor.getExecution(), outputs);
+                Map<String, Object> outputs = inputAndOutput.renderOutputs(flow.getOutputs());
+                outputs = inputAndOutput.typedOutputs(flow, executor.getExecution(), outputs);
                 newExecution = newExecution.withOutputs(outputs);
             } catch (Exception e) {
-                logService.logExecution(
+                Logs.logExecution(
                     executor.getExecution(),
                     Level.ERROR,
                     "Failed to render output values",
@@ -409,7 +431,7 @@ public class ExecutorService {
             }
         }
 
-        logService.logExecution(
+        Logs.logExecution(
             newExecution,
             Level.INFO,
             "Flow completed with state {} in {}",
@@ -427,7 +449,7 @@ public class ExecutorService {
 
         metricRegistry
             .timer(MetricRegistry.METRIC_EXECUTOR_EXECUTION_DURATION, MetricRegistry.METRIC_EXECUTOR_EXECUTION_DURATION_DESCRIPTION, metricRegistry.tags(newExecution))
-            .record(newExecution.getState().getDuration());
+            .record(newExecution.getState().getDurationOrComputeIt());
 
         return executor.withExecution(newExecution, "onEnd");
     }
@@ -563,9 +585,7 @@ public class ExecutorService {
                     RunContext runContext = runContextFactory.of(executor.getFlow(), task, executor.getExecution().withTaskRun(updatedTaskRun), updatedTaskRun);
                     List<NextTaskRun> next = ((FlowableTask<?>) task).resolveNexts(runContext, executor.getExecution(), updatedTaskRun);
                     Instant nextDate = waitFor.nextExecutionDate(runContext, executor.getExecution(), updatedTaskRun);
-                    if (next.isEmpty()) {
-                        return executor;
-                    } else if (nextDate != null) {
+                     if (nextDate != null) {
                         executionDelays.add(ExecutionDelay.builder()
                             .taskRunId(taskRun.getId())
                             .executionId(executor.getExecution().getId())
@@ -793,7 +813,7 @@ public class ExecutorService {
             .counter(MetricRegistry.METRIC_EXECUTOR_EXECUTION_STARTED_COUNT, MetricRegistry.METRIC_EXECUTOR_EXECUTION_STARTED_COUNT_DESCRIPTION, metricRegistry.tags(executor.getExecution()))
             .increment();
 
-        logService.logExecution(
+        Logs.logExecution(
             executor.getExecution(),
             Level.INFO,
             "Flow restarted"
@@ -887,21 +907,35 @@ public class ExecutorService {
         boolean hasMockedWorkerTask = false;
         record FixtureAndTaskRun(TaskFixture fixture, TaskRun taskRun) {}
         if (executor.getExecution().getFixtures() != null) {
-            RunContext runContext = runContextFactory.of(executor.getFlow(), executor.getExecution());
+            RunContext runContext = runContextInitializer.forExecutor((DefaultRunContext) runContextFactory.of(
+                executor.getFlow(),
+                executor.getExecution()
+            ));
             List<WorkerTaskResult> workerTaskResults = executor.getExecution()
                 .getTaskRunList()
                 .stream()
                 .filter(taskRun -> taskRun.getState().getCurrent().isCreated())
                 .flatMap(taskRun -> executor.getExecution().getFixtureForTaskRun(taskRun).stream().map(fixture -> new FixtureAndTaskRun(fixture, taskRun)))
-                .map(throwFunction(fixtureAndTaskRun -> WorkerTaskResult.builder()
-                    .taskRun(fixtureAndTaskRun.taskRun()
-                        .withState(Optional.ofNullable(fixtureAndTaskRun.fixture().getState()).orElse(State.Type.SUCCESS))
-                        .withOutputs(
-                            variablesService.of(StorageContext.forTask(fixtureAndTaskRun.taskRun),
-                                fixtureAndTaskRun.fixture().getOutputs() == null ? null : runContext.render(fixtureAndTaskRun.fixture().getOutputs()))
-                        )
-                    )
-                    .build()
+                .map(throwFunction(fixtureAndTaskRun -> {
+                    Optional<AssetsDeclaration> renderedAssetsDeclaration = runContext.render(executor.getFlow().findTaskByTaskId(fixtureAndTaskRun.taskRun.getTaskId()).getAssets()).as(AssetsDeclaration.class);
+                        return WorkerTaskResult.builder()
+                            .taskRun(fixtureAndTaskRun.taskRun()
+                                .withState(Optional.ofNullable(fixtureAndTaskRun.fixture().getState()).orElse(State.Type.SUCCESS))
+                                .withOutputs(
+                                    variablesService.of(StorageContext.forTask(fixtureAndTaskRun.taskRun),
+                                        fixtureAndTaskRun.fixture().getOutputs() == null ? null : runContext.render(fixtureAndTaskRun.fixture().getOutputs()))
+                                )
+                                .withAssets(new AssetsInOut(
+                                    renderedAssetsDeclaration.map(AssetsDeclaration::getInputs).orElse(Collections.emptyList()).stream()
+                                        .map(assetIdentifier -> assetIdentifier.withTenantId(executor.getFlow().getTenantId()))
+                                        .toList(),
+                                    fixtureAndTaskRun.fixture().getAssets() == null ? null : fixtureAndTaskRun.fixture().getAssets().stream()
+                                        .map(asset -> asset.withTenantId(executor.getFlow().getTenantId()))
+                                        .toList()
+                                ))
+                            )
+                            .build();
+                    }
                 ))
                 .toList();
 
@@ -933,7 +967,7 @@ public class ExecutorService {
                 ).toList();
                 Execution newExecution = executor.getExecution().withTaskRunList(newTaskRuns).withState(State.Type.BREAKPOINT);
                 executorToReturn = executorToReturn.withExecution(newExecution, "handleBreakpoint");
-                logService.logExecution(
+                Logs.logExecution(
                     newExecution,
                     Level.INFO,
                     "Flow is suspended at a breakpoint."
@@ -995,7 +1029,7 @@ public class ExecutorService {
                         executor.withExecution(
                             executor
                                 .getExecution()
-                                .withTaskRun(executableTaskRun.withState(State.Type.SKIPPED)),
+                                .withTaskRun(executableTaskRun.withState(State.Type.SKIPPED).addAttempt(TaskRunAttempt.builder().state(new State().withState(State.Type.SKIPPED)).build())),
                             "handleExecutableTaskSkipped"
                         );
                         return false;
@@ -1065,37 +1099,44 @@ public class ExecutorService {
 
         executor.getWorkerTasks()
             .removeIf(workerTask -> {
-                if (!(workerTask.getTask() instanceof ExecutionUpdatableTask)) {
+                if (!(workerTask.getTask() instanceof ExecutionUpdatableTask executionUpdatingTask)) {
                     return false;
                 }
 
-                var executionUpdatingTask = (ExecutionUpdatableTask) workerTask.getTask();
-
                 try {
-                    // handle runIf
+                    // Skip task if runIf condition is false
                     if (!TruthUtils.isTruthy(workerTask.getRunContext().render(workerTask.getTask().getRunIf()))) {
                         executor.withExecution(
                             executor
                                 .getExecution()
-                                .withTaskRun(workerTask.getTaskRun().withState(State.Type.SKIPPED)),
+                                .withTaskRun(workerTask.getTaskRun().withState(State.Type.SKIPPED).addAttempt(TaskRunAttempt.builder().state(new State().withState(State.Type.SKIPPED)).build())),
                             "handleExecutionUpdatingTaskSkipped"
                         );
                         return false;
                     }
 
+                    TaskRun runningTaskRun = workerTask
+                        .getTaskRun()
+                        .withAttempts(List.of(TaskRunAttempt.builder().state(new State().withState(State.Type.RUNNING)).build()))
+                        .withState(State.Type.RUNNING);
+
                     executor.withExecution(
                         executionUpdatingTask.update(executor.getExecution(), workerTask.getRunContext())
-                            .withTaskRun(workerTask.getTaskRun().withState(State.Type.RUNNING)),
+                            .withTaskRun(runningTaskRun),
                         "handleExecutionUpdatingTask.updateExecution"
                     );
 
-                    var taskState = executionUpdatingTask.resolveState(workerTask.getRunContext(), executor.getExecution()).orElse(State.Type.SUCCESS);
+                    var terminalState = executionUpdatingTask
+                        .resolveState(workerTask.getRunContext(), executor.getExecution())
+                        .orElse(State.Type.SUCCESS);
+
+                    TaskRunAttempt terminalAttempt = runningTaskRun.lastAttempt().withState(terminalState);
+
                     workerTaskResults.add(
                         WorkerTaskResult.builder()
-                            .taskRun(workerTask.getTaskRun().withAttempts(
-                                        Collections.singletonList(TaskRunAttempt.builder().state(new State().withState(taskState)).build())
-                                    )
-                                    .withState(taskState)
+                            .taskRun(runningTaskRun
+                                .withAttempts(List.of(terminalAttempt))
+                                .withState(terminalState)
                             )
                             .build()
                     );
@@ -1119,7 +1160,7 @@ public class ExecutorService {
         }
     }
 
-    public void addWorkerTaskResult(Executor executor, Supplier<Flow> flow, WorkerTaskResult workerTaskResult) throws InternalException {
+    public void addWorkerTaskResult(Executor executor, Supplier<FlowWithSource> flow, WorkerTaskResult workerTaskResult) throws InternalException {
         // dynamic tasks
         Execution newExecution = this.addDynamicTaskRun(
             executor.getExecution(),
@@ -1155,12 +1196,58 @@ public class ExecutorService {
                     MetricRegistry.METRIC_EXECUTOR_TASKRUN_ENDED_DURATION_DESCRIPTION,
                     metricRegistry.tags(workerTaskResult)
                 )
-                .record(taskRun.getState().getDuration());
+                .record(taskRun.getState().getDurationOrComputeIt());
+
+            if (
+                taskRun.getAssets() != null &&
+                    (!taskRun.getAssets().getInputs().isEmpty() || !taskRun.getAssets().getOutputs().isEmpty())
+            ) {
+                AssetUser assetUser = new AssetUser(
+                    taskRun.getTenantId(),
+                    taskRun.getNamespace(),
+                    taskRun.getFlowId(),
+                    newExecution.getFlowRevision(),
+                    taskRun.getExecutionId(),
+                    taskRun.getTaskId(),
+                    taskRun.getId(),
+                    taskRun.getState().getCurrent(),
+                    taskRun.getState().getStartDate(),
+                    taskRun.getState().getEndDate().orElse(null)
+                );
+
+                List<AssetIdentifier> outputIdentifiers = taskRun.getAssets().getOutputs().stream()
+                    .map(asset -> asset.withTenantId(taskRun.getTenantId()))
+                    .map(AssetIdentifier::of)
+                    .toList();
+                List<AssetIdentifier> inputAssets = taskRun.getAssets().getInputs().stream()
+                    .map(assetIdentifier -> assetIdentifier.withTenantId(taskRun.getTenantId()))
+                    .toList();
+                try {
+                    assetService.assetLineage(
+                        assetUser,
+                        inputAssets,
+                        outputIdentifiers
+                    );
+                } catch (QueueException e) {
+                    log.warn("Unable to submit asset lineage event for {} -> {}", inputAssets, outputIdentifiers, e);
+                }
+
+                // don't update output asserts if task fail
+                if (!taskRun.getState().isFailed()) {
+                    taskRun.getAssets().getOutputs().forEach(asset -> {
+                        try {
+                            assetService.asyncUpsert(assetUser, asset);
+                        } catch (QueueException e) {
+                            log.warn("Unable to submit asset upsert event for asset {}", asset.getId(), e);
+                        }
+                    });
+                }
+            }
         }
     }
 
     // Note: as the flow is only used in an error branch and it can take time to load, we pass it thought a Supplier
-    private Execution addDynamicTaskRun(Execution execution, Supplier<Flow> flow, WorkerTaskResult workerTaskResult) throws InternalException {
+    private Execution addDynamicTaskRun(Execution execution, Supplier<FlowWithSource> flow, WorkerTaskResult workerTaskResult) throws InternalException {
         ArrayList<TaskRun> taskRuns = new ArrayList<>(ListUtils.emptyOnNull(execution.getTaskRunList()));
 
         // declared dynamic tasks
